# manabot

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  README.md  buylist.csv.example  config.yaml.example  pyproject.toml  setup_bot.py
manabot/: __main__.py  analyzer.py  arbitrage.py  buylist.py  cli.py  config.py  db.py  discord_bot.py  matcher.py  models.py  optimizer.py  pricer.py  scheduler.py
manabot/api/: manapool.py  manapool_catalog.py  scryfall.py  scryfall_bulk.py  tcgtracking.py
manabot/reporter/: csv_report.py  discord.py  html.py  terminal.py
manabot/templates/: report.html.j2
scripts/: delete_tokens.py  find_dupe_tokens.py
tests/: test_analyzer.py  test_arbitrage.py  test_buylist.py  test_db.py  test_integration.py  test_manapool_client.py  test_matcher.py  test_optimizer.py  test_pricer.py  test_reporters.py  test_scryfall_bulk.py  test_scryfall_client.py
tests/fixtures/: sample_buylist.csv  sample_prices.json
