[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manabot"
version = "0.1.0"
description = "MTG price monitoring bot for ManaPool"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-cov>=5.0",
]
bot = [
    "discord.py>=2.0",
]
scheduler = [
    "apscheduler>=3.10.4",
]
full = [
    "discord.py>=2.0",
    "apscheduler>=3.10.4",
]

[project.scripts]
manabot = "manabot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["manabot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
